[package]
name = "re-ddns"
version = "0.1.0"
edition = "2021"
authors = ["Shinsya <shinsya_bp@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rddnsd"
path = "src/server.rs"
description = "ReDdns Service Server"

[[bin]]
name = "rddns"
path = "src/client.rs"
description = "ReDdns Client"

[dependencies]
env_logger = "0.11.1"
md5 = "*"
hyper = "1.1.0"
http-body-util = "*"
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.3", features = ["client", "client-legacy", "http1"] }
log = "0.4.20"
tokio = { version = "1.36.0", features = ["full"] }
chrono = "0.4.33"
rand = "0.8.5"
urlencoding = "2.1.3"
hmac = "0.12.1"
sha1 = "0.10.6"
base64 = "0.21.7"
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
clap = { version = "4.4.18", features = ["derive"] }